--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
+    "cookie-parser": "^1.4.4",
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
     "formdata": "^0.10.4",
@@ -20,6 +21,7 @@
     "wttr": "0.0.4"
   },
   "devDependencies": {
+    "firebase": "^5.8.5",
     "nodemon": "^1.18.10"
   },
   "scripts": {
