--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.4",
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
+    "firebase-admin": "^7.0.0",
     "formdata": "^0.10.4",
     "got": "^9.6.0",
     "http": "0.0.0",
