--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase-admin": "^7.0.0",
     "formdata": "^0.10.4",
     "got": "^9.6.0",
+    "grpc": "^1.19.0",
     "http": "0.0.0",
     "irc": "^0.5.2",
     "irc-colors": "^1.5.0",
